# MiniSafeML

./: .gitattributes  .gitignore  pyproject.toml
examples/: coffee_robot.msml  coffee_robot_complex.msml  coffee_robot_error.msml  hello.minisafeml  hello_smsl.msmsl
minisafeml/: __init__.py  cli.py  metamodel.py
minisafeml/analysis/: checker.py  risk_tree.py
minisafeml/grammar/: minisafeml.tx
minisafeml/reports/: traceability.py
tests/: test_checker.py  test_cli.py  test_metamodel.py  test_risk_tree.py  test_traceability.py
