[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minisafeml"
version = "0.1.0"
description = "A tiny starter project for a MiniSafeML DSL using textX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textX>=4.0",
    "rich>=13.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["minisafeml*"]